--- a/html/index.html
+++ b/html/index.html
@@ -147,7 +147,7 @@
             foods.forEach(food => {
                 const li = document.createElement('li');
                 const emoji = getEmoji(food.rating);
-                li.innerHTML = `${emoji} ${food.name}`;
+                li.innerHTML = `${emoji} ${food.category} ${food.name}`;
                 li.className = `rating-${food.rating}`;
 
                 ul.appendChild(li);
