--- a/html/index.html
+++ b/html/index.html
@@ -122,6 +122,8 @@
 
         function getEmoji(rating) {
             switch (rating) {
+                case -2:
+                    return '???' ; // Not Set Yet
                 case -1:
                     return '??' ; // Je ne sais pas
                 case 0:
