Split style and js out of html

--- a/html/index.html
+++ b/html/index.html
@@ -2,209 +2,13 @@
 <html>
 <head>
     <title>Search Page</title>
-    <style>
-        #searchInput {
-            width: 95%;
-            padding: 12px 20px;
-            margin: 8px 0;
-            box-sizing: border-box;
-            border: 5px solid #ccc;
-            border-radius: 40px;
-        }
-
-        #foodList {
-            list-style-type: none;
-            padding: 1;
-            width: 90%;
-        }
-
-        #foodList li {
-            padding: 12px;
-            border-bottom: 1px solid #ccc;
-        }
-
-        #foodList li:last-child {
-            border-bottom: none;
-        }
-        #foodList button {
-            margin-left: 10px;
-            padding: 5px 10px;
-            background-color: #4CAF50; /* Green */
-            border: none;
-            color: white;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            transition-duration: 0.4s;
-            cursor: pointer;
-        }
-
-        #foodList button:hover {
-            background-color: #45a049;
-        }
-
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-
-        table, th, td {
-            border: 1px solid #ddd;
-            padding: 8px;
-        }
-
-        tr:nth-child(even) {
-            background-color: #f2f2f2;
-        }
-
-        tr:hover {
-            background-color: #ddd;
-        }
-
-        th {
-            padding-top: 12px;
-            padding-bottom: 12px;
-            text-align: left;
-            background-color: #4CAF50;
-            color: white;
-        }
-        .rating-0 {
-             background-color: #0000008d; /* Black */
-        }
-        .rating-1 {
-             background-color: #ffcccc; /* Red */
-        }
-
-        .rating-2 {
-            background-color: #ffddcc; /* Orange */
-        }
-
-        .rating-3 {
-            background-color: #ffffcc; /* Yellow */
-        }
-
-        .rating-4 {
-            background-color: #ddffcc; /* Light Green */
-        }
-
-        .rating-5 {
-            background-color: #ccffcc; /* Green */
-        }
-        #tagContainer {
-            display: flex;
-            flex-wrap: wrap;
-            margin-bottom: 20px;
-        }
-
-        #tagContainer .tag {
-            background-color: #f1f1f1;
-            border: none;
-            color: black;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            margin: 4px 2px;
-            cursor: pointer;
-            transition-duration: 0.4s;
-        }
-
-        #tagContainer .tag:hover {
-            background-color: #3e8e41;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <div id="tagContainer"></div>
     <input type="text" id="searchInput" onkeyup="search()" placeholder="Search rating for foods..">
     <table id="foodTable"></table>
     </ul>
-
-    <script>
-        let foods = [];
-
-        fetch('foods.json')
-            .then(response => response.json())
-            .then(data => {
-                foods = data;
-                const categories = [...new Set(foods.map(food => food.category))];
-                displayTags(categories);
-                displayFoods(foods);
-            });
-
-        function removeAccents(str) {
-            return str.normalize("NFD").replace(/[\u0300-\u036f]/g, "");
-        }
-
-        function search() {
-            const input = removeAccents(document.getElementById('searchInput').value.toLowerCase());
-            const filteredFoods = foods.filter(food => removeAccents(food.name.toLowerCase()).includes(input));
-
-            displayFoods(filteredFoods);
-        }
-
-        function getEmoji(rating) {
-            switch (rating) {
-                case -2:
-                    return '???' ; // Not Set Yet
-                case -1:
-                    return '??' ; // Je ne sais pas
-                case 0:
-                    return "&#128513;"; // Fear
-                case 1:
-                    return '&#x1F92E;'; // Vomit
-                case 2:
-                    return '&#x1F615;'; // Mitigé
-                case 3:
-                    return '&#x1F60A;'; // Aime
-                case 4:
-                    return '&#x1F60D;'; // Adore
-                case 5:
-                    return '&#x1F970;'; // Adore
-                default:
-                    return '';
-            }
-        }
-
-        function displayFoods(foods) {
-            const table = document.getElementById('foodTable');
-            table.innerHTML = '';
-            foods.forEach(food => {
-                const tr = document.createElement('tr');
-                const emojiTd = document.createElement('td');
-                const categoryTd = document.createElement('td');
-                const nameTd = document.createElement('td');
-
-                const emoji = getEmoji(food.rating);
-                emojiTd.innerHTML = emoji;
-                categoryTd.textContent = food.category;
-                nameTd.textContent = food.name;
-
-                tr.appendChild(emojiTd);
-                tr.appendChild(categoryTd);
-                tr.appendChild(nameTd);
-                tr.className = `rating-${food.rating}`;
-
-                table.appendChild(tr);
-            });
-        }
-
-        function displayTags(categories) {
-            const container = document.getElementById('tagContainer');
-            container.innerHTML = '';
-            categories.forEach(category => {
-                const tag = document.createElement('button');
-                tag.textContent = category;
-                tag.className = 'tag';
-                tag.onclick = function() {
-                    document.getElementById('searchInput').value = category;
-                    search();
-                };
-                container.appendChild(tag);
-            });
-        }
-    </script>
 </body>
 </html>
