deploy: def07080638a4514dd00192c25d82e5fdc6fc649

--- a/index.html
+++ b/index.html
@@ -2,174 +2,13 @@
 <html>
 <head>
     <title>Search Page</title>
-    <style>
-        #searchInput {
-            width: 95%;
-            padding: 12px 20px;
-            margin: 8px 0;
-            box-sizing: border-box;
-            border: 5px solid #ccc;
-            border-radius: 40px;
-        }
-
-        #foodList {
-            list-style-type: none;
-            padding: 1;
-            width: 90%;
-        }
-
-        #foodList li {
-            padding: 12px;
-            border-bottom: 1px solid #ccc;
-        }
-
-        #foodList li:last-child {
-            border-bottom: none;
-        }
-        #foodList button {
-            margin-left: 10px;
-            padding: 5px 10px;
-            background-color: #4CAF50; /* Green */
-            border: none;
-            color: white;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            font-size: 16px;
-            transition-duration: 0.4s;
-            cursor: pointer;
-        }
-
-        #foodList button:hover {
-            background-color: #45a049;
-        }
-
-        .rating-0 {
-             background-color: #0000008d; /* Black */
-        }
-        .rating-1 {
-             background-color: #ffcccc; /* Red */
-        }
-
-        .rating-2 {
-            background-color: #ffddcc; /* Orange */
-        }
-
-        .rating-3 {
-            background-color: #ffffcc; /* Yellow */
-        }
-
-        .rating-4 {
-            background-color: #ddffcc; /* Light Green */
-        }
-
-        .rating-5 {
-            background-color: #ccffcc; /* Green */
-        }
-        #tagContainer {
-            display: flex;
-            flex-wrap: wrap;
-            margin-bottom: 20px;
-        }
-
-        #tagContainer .tag {
-            background-color: #f1f1f1;
-            border: none;
-            color: black;
-            padding: 10px 20px;
-            text-align: center;
-            text-decoration: none;
-            display: inline-block;
-            margin: 4px 2px;
-            cursor: pointer;
-            transition-duration: 0.4s;
-        }
-
-        #tagContainer .tag:hover {
-            background-color: #3e8e41;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <div id="tagContainer"></div>
     <input type="text" id="searchInput" onkeyup="search()" placeholder="Search rating for foods..">
-    <ul id="foodList">
+    <table id="foodTable"></table>
     </ul>
-
-    <script>
-        let foods = [];
-
-        fetch('foods.json')
-            .then(response => response.json())
-            .then(data => {
-                foods = data;
-                const categories = [...new Set(foods.map(food => food.category))];
-                displayTags(categories);
-                displayFoods(foods);
-            });
-
-        function removeAccents(str) {
-            return str.normalize("NFD").replace(/[\u0300-\u036f]/g, "");
-        }
-
-        function search() {
-            const input = removeAccents(document.getElementById('searchInput').value.toLowerCase());
-            const filteredFoods = foods.filter(food => removeAccents(food.name.toLowerCase()).includes(input));
-
-            displayFoods(filteredFoods);
-        }
-
-        function getEmoji(rating) {
-            switch (rating) {
-                case -2:
-                    return '???' ; // Not Set Yet
-                case -1:
-                    return '??' ; // Je ne sais pas
-                case 0:
-                    return "&#128513;"; // Fear
-                case 1:
-                    return '&#x1F92E;'; // Vomit
-                case 2:
-                    return '&#x1F615;'; // Mitigé
-                case 3:
-                    return '&#x1F60A;'; // Aime
-                case 4:
-                    return '&#x1F60D;'; // Adore
-                case 5:
-                    return '&#x1F970;'; // Adore
-                default:
-                    return '';
-            }
-        }
-
-        function displayFoods(foods) {
-            const ul = document.getElementById('foodList');
-            ul.innerHTML = '';
-            foods.forEach(food => {
-                const li = document.createElement('li');
-                const emoji = getEmoji(food.rating);
-                li.innerHTML = `${emoji} ${food.category} ${food.name}`;
-                li.className = `rating-${food.rating}`;
-
-                ul.appendChild(li);
-            });
-        }
-
-        function displayTags(categories) {
-            const container = document.getElementById('tagContainer');
-            container.innerHTML = '';
-            categories.forEach(category => {
-                const tag = document.createElement('button');
-                tag.textContent = category;
-                tag.className = 'tag';
-                tag.onclick = function() {
-                    document.getElementById('searchInput').value = category;
-                    search();
-                };
-                container.appendChild(tag);
-            });
-        }
-    </script>
 </body>
 </html>
