--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Search Page</title>
+    <title>Yum or Yuck: Guillaume's Food Radar</title>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Language" content="fr">   
     <link rel="stylesheet" type="text/css" href="styles.css">
     <script src="script.js"></script>
 </head>
 <body>
-    <div id="tagContainer"></div>
+    <div id="tagCategory"></div>
+    <div id="tagRate"></div>
     <input type="text" id="searchInput" onkeyup="search()" placeholder="Search rating for foods..">
     <table id="foodTable"></table>
     </ul>
